@@ -1,425 +1,216 @@
-# SpringBoot DDD 架构开发规范
+# taotao-cloud-project — CLAUDE.md
 
-## 项目架构概述
+企业级微服务快速开发脚手架 | JDK 25 / Gradle 9.6 / Spring Boot 4.1.0 / Spring Cloud Alibaba 2025.1.0.0
 
-本项目采用 **领域驱动设计（DDD）** 分层架构，严格遵循六边形架构思想。
+---
 
-### 包结构规范（必须遵守）
-com.company.product/
-├── domain/ # 领域层（核心业务逻辑）
-│ ├── model/ # 领域模型
-│ │ ├── aggregate/ # 聚合根
-│ │ │ └── order/
-│ │ │ ├── Order.java # 聚合根
-│ │ │ ├── OrderItem.java # 实体
-│ │ │ └── OrderStatus.java # 值对象
-│ │ ├── valueobject/ # 值对象
-│ │ │ ├── Money.java
-│ │ │ ├── Address.java
-│ │ │ └── Email.java
-│ │ └── event/ # 领域事件
-│ │ ├── OrderCreatedEvent.java
-│ │ └── OrderPaidEvent.java
-│ ├── service/ # 领域服务
-│ │ └── PricingService.java
-│ ├── repository/ # 仓储接口
-│ │ └── OrderRepository.java
-│ ├── specification/ # 规格模式
-│ │ └── OrderSpecification.java
-│ └── factory/ # 工厂
-│ └── OrderFactory.java
-├── application/ # 应用层（用例编排）
-│ ├── service/ # 应用服务
-│ │ ├── OrderApplicationService.java
-│ │ └── dto/ # 应用层DTO
-│ │ ├── CreateOrderCommand.java
-│ │ └── OrderDto.java
-│ ├── port/ # 端口（入站/出站）
-│ │ ├── inbound/ # 入站端口（API接口）
-│ │ │ └── OrderUseCase.java
-│ │ └── outbound/ # 出站端口（SPI接口）
-│ │ ├── PaymentPort.java
-│ │ └── NotificationPort.java
-│ └── handler/ # 事件处理器
-│ └── OrderEventHandler.java
-├── infrastructure/ # 基础设施层
-│ ├── repository/ # 仓储实现
-│ │ ├── JpaOrderRepository.java
-│ │ └── mapper/ # ORM映射
-│ │ └── OrderMapper.java
-│ ├── config/ # 配置
-│ │ ├── BeanConfiguration.java
-│ │ └── JpaConfiguration.java
-│ └── adapter/ # 适配器
-│ ├── payment/ # 支付适配器
-│ │ └── AlipayAdapter.java
-│ └── notification/ # 通知适配器
-│ └── SmsAdapter.java
-└── interfaces/ # 接口层
-├── rest/ # REST API
-│ ├── OrderController.java
-│ └── dto/ # REST DTO
-│ ├── OrderRequest.java
-│ └── OrderResponse.java
-└── message/ # 消息监听
-└── OrderMessageListener.java
+## 快速身份卡
 
-text
+| 项目 | 值 |
+|------|-----|
+| 类型 | Gradle 多模块 monorepo（一级 18+ 模块，含二级/三级子模块） |
+| JDK | 25（预览特性，所有编译/运行必须 `--enable-preview`） |
+| Gradle | 9.6 Wrapper (`distributionUrl=gradle-9.6.0-bin.zip`) |
+| Spring Boot / Cloud | 4.1.0 / 2025.1.1 |
+| Spring Cloud Alibaba | 2025.1.0.0 (Nacos / Sentinel / Seata) |
+| ORM | MyBatis-Plus 3.5.16 + Querydsl 5.1.0 |
+| BOM | `io.github.shuigedeng:taotao-cloud-dependencies:2026.08`（未开源，需私有仓库凭据） |
+| 分组 ID | `io.github.shuigedeng` |
+| 项目版本 | `2026.08` |
+| 交流语言 | **中文** |
 
-## DDD 核心原则
+---
 
-### 1. 聚合设计原则
-- **原子性**: 聚合内保证事务一致性，聚合间使用最终一致性
-- **小聚合**: 一个聚合根只包含必要实体，避免性能问题
-- **ID引用**: 跨聚合通过ID引用，而非对象引用
-- **不变性**: 聚合根负责维护内部不变量
+## 模块结构（来自 settings.gradle）
 
-```java
-// 聚合根示例
-@AggregateRoot
-@Entity
-@Table(name = "orders")
-public class Order {
-    @Id
-    private OrderId id;  // 值对象作为ID
-    
-    @Embedded
-    private CustomerId customerId;  // 跨聚合引用
-    
-    @OneToMany(cascade = CascadeType.ALL, fetch = FetchType.EAGER)
-    private List<OrderItem> items = new ArrayList<>();
-    
-    @Embedded
-    private Money totalAmount;
-    
-    private OrderStatus status;
-    
-    // 聚合根行为方法
-    public void addItem(ProductId productId, Money price, int quantity) {
-        // 业务规则校验
-        if (status != OrderStatus.PENDING) {
-            throw new DomainException("只能向待支付订单添加商品");
-        }
-        
-        OrderItem item = new OrderItem(productId, price, quantity);
-        items.add(item);
-        recalculateTotal();
-        
-        // 注册领域事件
-        registerEvent(new OrderItemAddedEvent(id, productId, quantity));
-    }
-    
-    public void pay() {
-        if (items.isEmpty()) {
-            throw new DomainException("空订单不能支付");
-        }
-        this.status = OrderStatus.PAID;
-        registerEvent(new OrderPaidEvent(id, totalAmount));
-    }
-    
-    private void recalculateTotal() {
-        this.totalAmount = items.stream()
-            .map(OrderItem::getSubtotal)
-            .reduce(Money.ZERO, Money::add);
-    }
-    
-    // 无参构造器（JPA要求）
-    protected Order() {}
-    
-    // 工厂方法
-    public static Order create(CustomerId customerId, Address shippingAddress) {
-        Order order = new Order();
-        order.id = new OrderId(IdGenerator.next());
-        order.customerId = customerId;
-        order.status = OrderStatus.PENDING;
-        order.registerEvent(new OrderCreatedEvent(order.id));
-        return order;
-    }
-}
-2. 值对象设计
-不可变性: 所有字段final，无setter方法
+```
+taotao-cloud-project/                      # 根项目
+│
+├── 一级模块（单层）：
+│   ├── taotao-cloud-scala/
+│   ├── taotao-cloud-python/
+│   ├── taotao-cloud-design-patterns/
+│   ├── taotao-cloud-cache/               # 自研缓存中间件
+│   ├── taotao-cloud-jdbcpool/            # JDBC 连接池
+│   ├── taotao-cloud-netty/               # Netty 组件
+│   └── taotao-cloud-ai/                  # AI 模块
+│
+├── 二级模块（模块/子模块）：
+│   ├── taotao-cloud-bigdata/             # 大数据（Flink/Spark/Hudi/Seatunnel）
+│   ├── taotao-cloud-plugin/              # 插件模块
+│   ├── taotao-cloud-mq/                  # 自研消息中间件
+│   ├── taotao-cloud-rpc/                 # 自研 RPC 框架
+│   ├── taotao-cloud-tx/                  # 分布式事务中间件
+│   ├── taotao-cloud-job/                 # 自研任务调度
+│   └── taotao-cloud-ccsr/               # 配置中心 & 注册中心
+│
+├── 三级模块（模块/层/子层）：
+│   ├── taotao-cloud-microservice/        # ★ 核心微服务
+│   │   ├── taotao-cloud-business/       # DDD 业务模块（auth/member/goods/order/sys…）
+│   │   ├── taotao-cloud-gateway/        # Spring Cloud Gateway + Sentinel
+│   │   ├── taotao-cloud-bff/            # BFF 适配层
+│   │   ├── taotao-cloud-monitor/        # Spring Boot Admin
+│   │   ├── taotao-cloud-open-platform/  # 开放平台
+│   │   ├── taotao-cloud-data-sync/      # 数据同步
+│   │   ├── taotao-cloud-data-analysis/  # 数据分析
+│   │   ├── taotao-cloud-generator/      # 代码生成
+│   │   ├── taotao-cloud-recommend/      # 推荐系统
+│   │   ├── taotao-cloud-shell/          # Shell 控制台
+│   │   └── taotao-cloud-xxljob/         # XXL-JOB 集成
+│   ├── taotao-cloud-warehouse/           # 数仓（Doris/Paimon/Hudi）
+│   └── taotao-cloud-agent/              # Agent 模块
+│
+├── gradle/libs.versions.toml             # 版本目录
+├── gradle.properties                     # 全局属性
+├── settings.gradle                       # 子模块声明（三种层级模式）
+└── build.gradle                          # 根构建脚本
+```
 
-无标识: 通过属性值判断相等性
+### DDD 业务模块内结构（参考 `taotao-cloud-business/taotao-cloud-order/`）
 
-自验证: 构造时验证数据合法性
+```
+{module}/
+├── api/               # RPC/gRPC 接口 + DTO（零依赖）
+├── application/       # 应用层：编排、事务边界、DTO 转换
+├── assembly/          # 启动器 + application.yml / logback-spring.xml
+├── common/            # 公共工具、枚举、常量
+├── domain/            # ★ 领域层（零外部依赖，不依赖 Spring/DB）
+├── facade/            # 防腐层 ACL
+├── infrastructure/    # 持久化、MQ 发布、事件总线
+└── interfaces/        # REST Controller + RPC/gRPC
+```
 
-java
-@ValueObject
-@Embeddable
-public class Money {
-    private final BigDecimal amount;
-    private final Currency currency;
-    
-    public Money(BigDecimal amount, Currency currency) {
-        if (amount == null || amount.compareTo(BigDecimal.ZERO) < 0) {
-            throw new DomainException("金额不能为负数");
-        }
-        this.amount = amount;
-        this.currency = currency;
-    }
-    
-    public Money add(Money other) {
-        if (!this.currency.equals(other.currency)) {
-            throw new DomainException("货币类型不匹配");
-        }
-        return new Money(this.amount.add(other.amount), this.currency);
-    }
-    
-    // 只有getter，无setter
-    public BigDecimal getAmount() { return amount; }
-    public Currency getCurrency() { return currency; }
-    
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (!(o instanceof Money)) return false;
-        Money money = (Money) o;
-        return amount.compareTo(money.amount) == 0 &&
-               currency.equals(money.currency);
-    }
-    
-    @Override
-    public int hashCode() {
-        return Objects.hash(amount, currency);
-    }
-}
-3. 领域服务
-无状态: 不持有状态，只提供行为
+> 所有 `taotao-cloud-business/*/` 下的 DDD 模块均遵循上述结构。
 
-跨聚合: 协调多个聚合的业务逻辑
+---
 
-业务价值: 不属于任何单一聚合
+## 架构规则（详细版在 `.claude/rules/`）
 
-java
-@DomainService
-@Service
-@Slf4j
-public class PricingService {
-    private final ProductRepository productRepository;
-    private final DiscountPolicy discountPolicy;
-    
-    public PricingService(ProductRepository productRepository, 
-                          DiscountPolicy discountPolicy) {
-        this.productRepository = productRepository;
-        this.discountPolicy = discountPolicy;
-    }
-    
-    /**
-     * 计算订单总价（跨聚合逻辑）
-     */
-    public Money calculateOrderPrice(Order order, CustomerType customerType) {
-        Money subtotal = Money.ZERO;
-        
-        for (OrderItem item : order.getItems()) {
-            Product product = productRepository.findById(item.getProductId())
-                .orElseThrow(() -> new DomainException("商品不存在"));
-            Money itemPrice = product.getPrice().multiply(item.getQuantity());
-            subtotal = subtotal.add(itemPrice);
-        }
-        
-        // 应用折扣策略
-        Money discount = discountPolicy.calculateDiscount(subtotal, customerType);
-        return subtotal.subtract(discount);
-    }
-}
-4. 仓储模式
-接口在领域层: 业务依赖抽象
+以下为**必须遵守**的核心约束。更细化的规则（聚合设计、值对象、API 规范、测试、代码风格等）定义在 `.claude/rules/*.md`，请一并查阅。
 
-实现在基础设施: 技术细节隔离
+### 分层依赖
 
-java
-// 领域层接口
-public interface OrderRepository {
-    Order findById(OrderId id);
-    void save(Order order);
-    void delete(OrderId id);
-    Page<Order> findByCustomerId(CustomerId customerId, Pageable pageable);
-}
+```
+api  ←  interfaces  ←  application  →  facade  （防腐层）
+                          ↓
+                     domain  ←  infrastructure
+```
 
-// 基础设施层实现
-@Repository
-public class OrderRepositoryImpl implements OrderRepository {
-    private final JpaOrderRepository jpaRepository;
-    private final OrderMapper mapper;
-    
-    @Override
-    public Order findById(OrderId id) {
-        OrderPo orderPo = jpaRepository.findById(id.getValue())
-            .orElseThrow(() -> new DomainException("订单不存在"));
-        return mapper.toDomain(orderPo);
-    }
-    
-    @Override
-    public void save(Order order) {
-        OrderPo po = mapper.toPo(order);
-        jpaRepository.save(po);
-        
-        // 发布领域事件
-        order.getDomainEvents().forEach(this::publishEvent);
-        order.clearEvents();
-    }
-}
-5. 应用服务（用例编排）
-薄薄一层: 不包含业务逻辑
+### 关键约束
 
-事务边界: 开启数据库事务
+| 层 | 依赖 | 可依赖 Spring？ | 核心职责 |
+|----|------|---------------|----------|
+| `domain` | 无 | ❌ | 聚合根、实体、值对象、领域事件、仓储接口 |
+| `application` | domain, facade 接口 | ✅ 事务 | 编排，不含业务规则判断 |
+| `infrastructure` | domain | ✅ | 仓储实现、MQ 发布 |
+| `interfaces` | application | ✅ | Controller，不含业务逻辑 |
+| `api` | 无 | ❌ | DTO + 接口定义 |
 
-协调作用: 调用领域层和基础设施
+### 命名规则
 
-java
-@ApplicationService
-@Service
-@Transactional
-@Slf4j
-public class OrderApplicationService implements OrderUseCase {
-    private final OrderRepository orderRepository;
-    private final PricingService pricingService;
-    private final PaymentPort paymentPort;
-    private final DomainEventPublisher eventPublisher;
-    
-    @Override
-    public OrderDto createOrder(CreateOrderCommand command) {
-        log.info("Creating order for customer: {}", command.getCustomerId());
-        
-        // 1. 创建聚合（工厂）
-        Order order = Order.create(
-            new CustomerId(command.getCustomerId()),
-            command.getShippingAddress()
-        );
-        
-        // 2. 添加商品
-        for (OrderItemCommand item : command.getItems()) {
-            order.addItem(
-                new ProductId(item.getProductId()),
-                new Money(item.getPrice(), Currency.USD),
-                item.getQuantity()
-            );
-        }
-        
-        // 3. 应用领域服务计算价格
-        Money total = pricingService.calculateOrderPrice(
-            order, 
-            command.getCustomerType()
-        );
-        
-        // 4. 保存聚合
-        orderRepository.save(order);
-        
-        // 5. 发布领域事件
-        eventPublisher.publish(order.getDomainEvents());
-        
-        return OrderDto.fromDomain(order);
-    }
-}
-6. 领域事件
-解耦聚合: 聚合间通过事件通信
+| 元素 | 格式 | 示例 |
+|------|------|------|
+| 聚合根 | 业务名词 | `OrderAgg`, `Product` |
+| 值对象 | 描述性名词 | `Money`, `Address` |
+| 领域事件 | 名词 + 过去式 | `OrderCreatedEvent` |
+| 命令 | {动词}{名词}Command | `CreateOrderCommand` |
+| 仓储接口 | {名词}Repository | `OrderRepository` |
+| 应用服务 | {名词}CommandService | `OrderCommandService` |
+| Controller | {名词}{端}Controller | `OrderBuyerController` |
 
-最终一致性: 使用事件处理器实现
+### 禁止项
 
-java
-@DomainEvent
-public class OrderPaidEvent extends DomainEvent {
-    private final OrderId orderId;
-    private final Money amount;
-    private final LocalDateTime paidAt;
-    
-    public OrderPaidEvent(OrderId orderId, Money amount) {
-        this.orderId = orderId;
-        this.amount = amount;
-        this.paidAt = LocalDateTime.now();
-    }
-    
-    // Getters...
-}
+- Controller 写业务逻辑 / 聚合根注入 Repository / ApplicationService 含业务判断
+- Domain 层依赖 Spring / 数据库框架
+- `SELECT *` / Java 拼接 SQL / 聚合内 N+1 循环查库
+- 配置明文存储密码 / 密钥 / Token
 
-// 事件处理器
-@Component
-@Slf4j
-public class OrderEventHandler {
-    @EventListener
-    @Async
-    @Transactional(propagation = Propagation.REQUIRES_NEW)
-    public void handleOrderPaid(OrderPaidEvent event) {
-        log.info("Order paid: {}, amount: {}", event.getOrderId(), event.getAmount());
-        // 发送通知、更新统计等
-    }
-}
-开发流程规范
-1. 战略设计阶段
-事件风暴: 识别领域事件、命令、聚合
+---
 
-限界上下文: 划分业务边界
+## 常用命令
 
-上下文映射: 定义上下文关系
+```bash
+# 编译
+./gradlew build
 
-2. 战术设计阶段
-识别聚合根和值对象
+# 全部测试
+./gradlew test
 
-定义领域服务和仓储接口
+# 指定模块测试（模块名见 settings.gradle）
+./gradlew :taotao-cloud-order-domain:test --tests "*OrderTest*"
 
-编写领域模型测试
+# 代码质量门禁
+./gradlew checkstyleMain spotlessCheck pmdMain spotbugsMain
 
-实现应用服务和REST API
+# OWASP 依赖安全扫描
+./gradlew dependencyCheckAnalyze
 
-3. 代码审查要点
-聚合是否保证了业务不变性
+# 本地启动（环境: dev/test/pre/pro）
+./gradlew :taotao-cloud-order-assembly:bootRun --args='--spring.profiles.active=dev'
 
-值对象是否不可变
+# 代码格式化
+./gradlew spotlessApply
 
-仓储接口是否在领域层
+# 发布到本地 Maven
+./gradlew publishToMavenLocal
 
-跨聚合是否通过ID引用
+# JaCoCo 覆盖率报告
+./gradlew jacocoTestReport
 
-领域事件是否实现最终一致性
+# 跳过测试构建
+./gradlew build -x test
+```
 
-测试策略
-单元测试（领域层）
-java
-@Test
-class OrderTest {
-    @Test
-    void shouldAddItemToPendingOrder() {
-        Order order = Order.create(customerId, address);
-        order.addItem(productId, new Money(100), 2);
-        
-        assertThat(order.getTotalAmount()).isEqualTo(new Money(200));
-        assertThat(order.getDomainEvents()).hasSize(2);
-    }
-}
-集成测试（应用层）
-java
-@SpringBootTest
-@Transactional
-class OrderApplicationServiceTest {
-    @Test
-    void shouldCreateOrder() {
-        CreateOrderCommand command = createCommand();
-        OrderDto result = orderService.createOrder(command);
-        
-        assertThat(result.getId()).isNotNull();
-        assertThat(result.getStatus()).isEqualTo(OrderStatus.PENDING);
-    }
-}
-命名约定
-聚合根: 业务名词（Order, Product, User）
+---
 
-值对象: 描述性名词（Money, Address, Email）
+## 使用 .claude/ 中的现有配置
 
-领域服务: 动词+名词（PricingService, ShippingService）
+### 工作流命令（`.claude/commands/`）
 
-领域事件: 名词+过去式动词（OrderCreatedEvent, UserRegisteredEvent）
+| 命令 | 文件 | 用途 |
+|------|------|------|
+| `/ttc-review` | `commands/ttc-review.md` | DDD 代码审查 |
+| `/ttc-test` | `commands/ttc-test.md` | 运行测试 |
+| `/ttc-swagger` | `commands/ttc-swagger.md` | Swagger 文档生成 |
+| `/ttc-deploy` | `commands/ttc-deploy.md` | 模块部署 |
 
-仓储接口: 聚合根名+Repository（OrderRepository）
+通过 `command` 参数调用：`task(command="/ttc-review", prompt="...")`
 
-应用服务: 聚合根名+ApplicationService（OrderApplicationService）
+### 规则文件（`.claude/rules/`）
 
-重要提醒
-严禁在聚合根中注入仓储或领域服务
+- `ttc-architecture.md` — 架构分层规范
+- `ttc-code-style.md` — 代码风格
+- `ttc-api-conventions.md` — API 约定
+- `ttc-aggregate-design.md` — 聚合设计
+- `ttc-domain-service.md` — 领域服务
+- `value-object.md` — 值对象
+- `ttc-testing.md` — 测试规范
 
-严禁在值对象中添加业务行为以外的逻辑
+### 专用 Agent（`.claude/agents/`）
 
-跨聚合操作必须通过应用服务协调
+- `ttc-domain-expert` / `ttc-backend-architect` / `ttc-code-reviewer`
+- `ttc-security-auditor` / `ttc-db-expert` / `ttc-aggregate-designer`
 
-数据库事务只能开启在应用层
+复杂任务可委托这些 Agent：`task(subagent_type="ttc-domain-expert", prompt="...")`
 
-领域模型必须与持久化模型分离
+---
+
+## 工作方式
+
+1. **先问清楚** — 除非任务明确，先提问再动手
+2. **查阅规则** — 涉及架构/代码生成时，先读 `.claude/rules/` 相关文件
+3. **使用命令** — `.claude/commands/` 有现成工作流，优先使用
+4. **质量门禁** — 改完代码后按门禁逐项验证，不留类型忽略（禁止 `as any`/`@ts-ignore`）
+5. **写中文** — 所有对话、代码注释、文档使用中文
+6. **简洁直接** — 不做无意义客套，用 todo 跟踪进度
+
+---
+
+## 注意事项
+
+- JDK 25 预览特性：所有编译/测试/执行必须带 `--enable-preview`
+- 私有 BOM `taotao-cloud-dependencies:2026.08` 需私有仓库凭据
+- `taotao-cloud-starter/*` 是独立仓库（不在本 monorepo 内），只消费其发布件
+- 前端在独立仓库 `taotao-cloud-ui`，基于 Vue 3 + React + Taro
+- 部署支持 Shell / Docker / Docker Compose / K8s / GitHub Actions
+- 代码中不得包含任何公司业务代码，仅通用技术框架封装
